# DZ_24.1

./: README.md  pyproject.toml
config/: settings.py  urls.py
education/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_lesson_course_link_course.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
